Plaid integration checkpoint - able to save a link

--- a/src/core/alembic.ini
+++ b/src/core/alembic.ini
@@ -9,7 +9,7 @@ script_location = alembic
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
-prepend_sys_path = .
+prepend_sys_path = ./../
 
 # timezone to use when rendering the date
 # within the migration file as well as the filename.
@@ -39,7 +39,7 @@ prepend_sys_path = .
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql://tim:dl7537@mp-1.cnl8otl80kk5.us-west-2.rds.amazonaws.com/stonks_dev
+sqlalchemy.url = mysql://moneyprinter:!QAZxsw2@127.0.0.1:3306/money_printer_sandbox
 
 
 [post_write_hooks]
