--- a/src/client/package.json
+++ b/src/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "i18next": "^20.4.0",
+    "jwt-decode": "^3.1.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
@@ -25,6 +26,7 @@
     "rxjs": "^7.3.0",
     "sass": "^1.38.1",
     "typescript": "^4.4.2",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
