--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -62,6 +62,7 @@ ptyprocess==0.7.0
 py-bcrypt==0.4
 pycparser==2.20
 Pygments==2.10.0
+PyJWT==2.1.0
 pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
