--- a/src/client/package.json
+++ b/src/client/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -25,9 +26,11 @@
     "redux": "^4.1.1",
     "rxjs": "^7.3.0",
     "sass": "^1.38.1",
+    "socket.io-client": "^4.2.0",
     "typescript": "^4.4.2",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "ws": "^8.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -72,6 +75,7 @@
     "@storybook/node-logger": "^6.3.7",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.7",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "@types/ws": "^7.4.7"
   }
 }
