--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,6 +4,7 @@ argon2-cffi==20.1.0
 attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
+bidict==0.21.2
 bleach==4.0.0
 cached-property==1.5.2
 certifi==2021.5.30
@@ -13,9 +14,12 @@ click==8.0.1
 debugpy==1.4.1
 decorator==5.0.9
 defusedxml==0.7.1
+dnspython==2.1.0
 entrypoints==0.3
+eventlet==0.32.0
 Flask==2.0.1
 Flask-Cors==3.0.10
+Flask-SocketIO==5.1.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.1
 idna==3.2
@@ -67,6 +71,8 @@ pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 python-editor==1.0.4
+python-engineio==4.2.1
+python-socketio==5.4.0
 pytz==2021.1
 pyzmq==22.2.1
 requests==2.26.0
