--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.6.5
 anyio==3.3.0
+APScheduler==3.7.0
 argon2-cffi==20.1.0
 attrs==21.2.0
 Babel==2.9.1
@@ -16,12 +17,13 @@ decorator==5.0.9
 defusedxml==0.7.1
 dnspython==2.1.0
 entrypoints==0.3
-eventlet==0.32.0
 Flask==2.0.1
 Flask-Cors==3.0.10
 Flask-SocketIO==5.1.1
 Flask-SQLAlchemy==2.5.1
+Flask-SSE==1.0.0
 greenlet==1.1.1
+h11==0.12.0
 idna==3.2
 iexfinance==0.5.0
 inflection==0.5.1
@@ -60,6 +62,7 @@ parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 plaid-python==8.0.0
+polygon-api-client==0.2.11
 prometheus-client==0.11.0
 prompt-toolkit==3.0.19
 ptyprocess==0.7.0
@@ -75,21 +78,33 @@ python-engineio==4.2.1
 python-socketio==5.4.0
 pytz==2021.1
 pyzmq==22.2.1
+redis==3.5.3
 requests==2.26.0
 requests-unixsocket==0.2.0
 Send2Trash==1.8.0
+simple-websocket==0.3.0
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.23
 sqlalchemy-orm==1.2.2
+sseclient-py==1.7
 terminado==0.11.1
 testpath==0.5.0
 tornado==6.1
 traitlets==4.3.3
 typing-extensions==3.10.0.0
 typing-inspect==0.7.1
+tzlocal==2.1
 urllib3==1.26.6
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.2.1
+websockets==9.1
 Werkzeug==2.0.1
+wsproto==1.0.0
+
+contextvars~=2.4
+pip~=21.1.2
+colorama~=0.4.4
+dataclasses~=0.8
+setuptools~=57.0.0
