--- a/src/client/package.json
+++ b/src/client/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "d3": "^7.0.1",
+    "d3-zoom": "^3.0.0",
     "i18next": "^20.4.0",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.7.2",
@@ -75,6 +77,7 @@
     "@storybook/node-logger": "^6.3.7",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.7",
+    "@types/d3": "^7.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@types/ws": "^7.4.7"
   }
