chart refactors, now hopefully live charting works with my lib format?

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -20,7 +20,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     // just while im deving, fuuuuuck
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    // disabling cause TS has bugs apparently
+    "strictFunctionTypes": false,
+    "strictBindCallApply": false
   },
   "include": [
     "src"
