--- a/src/client/package.json
+++ b/src/client/package.json
@@ -17,7 +17,7 @@
     "d3-zoom": "^3.0.0",
     "i18next": "^20.4.0",
     "jwt-decode": "^3.1.2",
-    "plaid": "^8.5.3",
+    "plaid": "^9.0.0-beta.15",
     "plaid-threads": "^11.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
