--- a/src/client/package.json
+++ b/src/client/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap-icons": "^1.5.0",
     "react-d3-library": "^1.1.8",
     "react-dom": "^17.0.2",
     "react-plaid-link": "^3.2.1",
