--- a/src/client/package.json
+++ b/src/client/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
+    "bluebird": "^3.7.2",
     "bootstrap": "^5.1.0",
     "d3": "^7.0.1",
     "d3-zoom": "^3.0.0",
@@ -82,6 +83,7 @@
     "@storybook/node-logger": "^6.3.7",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.7",
+    "@types/bluebird": "^3.5.36",
     "@types/d3": "^7.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@types/ws": "^7.4.7"
