--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,5 @@
 bcrypt==3.2.0
+bidict==0.21.3
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
@@ -6,22 +7,34 @@ click==8.0.1
 configparser==5.0.2
 cryptography==3.4.8
 flake8==3.9.2
+Flask==2.0.1
+Flask-Cors==3.0.10
+Flask-SocketIO==5.1.1
 greenlet==1.1.1
 idna==3.2
+iexfinance==0.5.0
+itsdangerous==2.0.1
 Jinja2==3.0.1
 jwt==1.2.0
 MarkupSafe==2.0.1
 mccabe==0.6.1
 mysqlclient==2.0.3
 nulltype==2.3.1
+numpy==1.21.2
+pandas==1.3.3
 plaid-python==8.2.0
 pycodestyle==2.7.0
 pycparser==2.20
 pyflakes==2.3.1
 python-dateutil==2.8.2
+python-engineio==4.2.1
+python-socketio==5.4.0
+pytz==2021.1
 PyYAML==5.4.1
 redis==3.5.3
 requests==2.26.0
 six==1.16.0
 SQLAlchemy==1.4.23
+sseclient==0.0.27
 urllib3==1.26.6
+Werkzeug==2.0.1
