--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -42,10 +42,12 @@ jupyter-server==1.10.2
 jupyterlab==3.1.7
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.7.1
+lxml==4.6.3
 Mako==1.1.5
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.2
 mistune==0.8.4
+multitasking==0.0.9
 mypy-extensions==0.4.3
 mysqlclient==2.0.3
 nbclassic==0.3.1
@@ -58,6 +60,7 @@ nulltype==2.3.1
 numpy==1.19.5
 packaging==21.0
 pandas==1.1.5
+pandas-datareader==0.10.0
 pandocfilters==1.4.3
 parso==0.8.2
 pexpect==4.8.0
@@ -104,3 +107,4 @@ websocket-client==1.2.1
 websockets==9.1
 Werkzeug==2.0.1
 wsproto==1.0.0
+yfinance==0.1.63
