--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -13,6 +13,7 @@ certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
 click==8.0.1
+cycler==0.10.0
 debugpy==1.4.1
 decorator==5.0.9
 defusedxml==0.7.1
@@ -42,9 +43,11 @@ jupyter-server==1.10.2
 jupyterlab==3.1.7
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.7.1
+kiwisolver==1.3.2
 lxml==4.6.3
 Mako==1.1.5
 MarkupSafe==2.0.1
+matplotlib==3.4.3
 matplotlib-inline==0.1.2
 mistune==0.8.4
 multitasking==0.0.9
@@ -63,8 +66,10 @@ pandas==1.1.5
 pandas-datareader==0.10.0
 pandocfilters==1.4.3
 parso==0.8.2
+patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.3.2
 plaid-python==8.0.0
 polygon-api-client==0.2.11
 prometheus-client==0.11.0
@@ -85,6 +90,7 @@ pyzmq==22.2.1
 redis==3.5.3
 requests==2.26.0
 requests-unixsocket==0.2.0
+scipy==1.7.1
 Send2Trash==1.8.0
 simple-websocket==0.3.0
 six==1.16.0
@@ -93,6 +99,7 @@ soupsieve==2.2.1
 SQLAlchemy==1.4.23
 sqlalchemy-orm==1.2.2
 sseclient-py==1.7
+statsmodels==0.12.2
 terminado==0.11.1
 testpath==0.5.0
 tornado==6.1
