--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -35,6 +35,7 @@ ipython-genutils==0.2.0
 itsdangerous==2.0.1
 jedi==0.18.0
 Jinja2==3.0.1
+joblib==1.0.1
 json5==0.9.6
 jsonschema==3.2.0
 jupyter-client==6.1.12
@@ -90,6 +91,7 @@ pyzmq==22.2.1
 redis==3.5.3
 requests==2.26.0
 requests-unixsocket==0.2.0
+scikit-learn==0.24.2
 scipy==1.7.1
 seaborn==0.11.2
 Send2Trash==1.8.0
@@ -103,6 +105,7 @@ sseclient-py==1.7
 statsmodels==0.12.2
 terminado==0.11.1
 testpath==0.5.0
+threadpoolctl==2.2.0
 tornado==6.1
 traitlets==4.3.3
 typing-extensions==3.10.0.0
