Checkpoint, starting in dev

--- a/src/core/alembic.ini
+++ b/src/core/alembic.ini
@@ -39,7 +39,8 @@ prepend_sys_path = ./../
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql://moneyprinter:!QAZxsw2@127.0.0.1:3306/money_printer_sandbox
+# sqlalchemy.url = mysql://moneyprinter:!QAZxsw2@127.0.0.1:3306/money_printer_sandbox
+sqlalchemy.url = mysql://moneyprinter:!QAZxsw2@127.0.0.1:3306/money_printer_dev
 
 
 [post_write_hooks]
