--- a/src/server/services/api/Dockerfile
+++ b/src/server/services/api/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM python:3
 
-WORKDIR /app
+ARG environment
 
 RUN apt update
 RUN apt install -y nginx
@@ -10,10 +10,21 @@ RUN apt install -y nginx
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-COPY server/requirements.txt requirements.txt
+COPY requirements.txt requirements.txt
 
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY core core
 COPY server server
+COPY bin/api bin/api
+
+RUN chmod +x bin/api
+RUN mkdir logs
+
+EXPOSE 5000
+
+ENV MP_ENVIRONMENT=environment:-development
+ENV PYTHONPATH="${PYTHONPATH}:."
+
+ENTRYPOINT python server/services/api/api_server.py
