--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,7 +16,7 @@ idna==3.2
 iexfinance==0.5.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
-jwt==1.2.0
+pyjwt==2.1.0
 MarkupSafe==2.0.1
 mccabe==0.6.1
 mysqlclient==2.0.3
