debugged docker, micro and macro working

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "host": "0.0.0.0",
+    "host": "localhost",
     "port": "8000",
     "mailgun": {
       "domain": "mg.moneyprintergobrr.io"
