--- a/src/.dockerignore
+++ b/src/.dockerignore
@@ -3,4 +3,13 @@
 .venv
 .idea
 logs
-client
+client# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore
