--- a/src/server/services/task_runner/Dockerfile
+++ b/src/server/services/task_runner/Dockerfile
@@ -24,4 +24,4 @@ RUN mkdir logs
 ENV MP_ENVIRONMENT=environment:-development
 ENV PYTHONPATH=$PYTHONPATH:.
 
-ENTRYPOINT python server/bin/task-runner.py && tail -f log/mp.log
+ENTRYPOINT python server/bin/task-runner.py && tail -f logs/mp.log
