A bunch of work required to get the application to deploy in Docker in EB
Refactors all the repository methods to take objects where possible, IDs only
used for fetching objects

This was to solve inconsistencies with different code paths for syncing Plaid data

Also adds type hinting all through the repository layer to help with dev.

--- a/src/.dockerignore
+++ b/src/.dockerignore
@@ -1,9 +1,42 @@
 .DS_Store
 .git
 .venv
+.winvenv
 .idea
 logs
-client# Elastic Beanstalk Files
+client
+.elasticbeanstalk/*
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
+.gitignore# Elastic Beanstalk Files
 .elasticbeanstalk/*
 .git
 .gitignore# Elastic Beanstalk Files
