--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,11 +1,8 @@
 #syntax=docker/dockerfile:1
 
-FROM python:3
+FROM tgittos/money-printer:latest
 
 ARG environment
-
-RUN apt update
-RUN apt -y install redis
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
@@ -18,7 +15,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY core core
 COPY server server
 COPY .secrets.json .secrets.json
-COPY config* .
+COPY config* ./
 COPY bin/money-printer bin/money-printer
 
 RUN mkdir logs
