making sense of the ux with real data

--- a/src/.dockerignore
+++ b/src/.dockerignore
@@ -45,4 +45,7 @@ client
 .gitignore# Elastic Beanstalk Files
 .elasticbeanstalk/*
 .git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
 .gitignore
