--- a/src/.dockerignore
+++ b/src/.dockerignore
@@ -48,4 +48,7 @@ client
 .gitignore# Elastic Beanstalk Files
 .elasticbeanstalk/*
 .git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
 .gitignore
