--- a/src/client/package.json
+++ b/src/client/package.json
@@ -27,11 +27,13 @@
     "react-bootstrap-icons": "^1.5.0",
     "react-d3-library": "^1.1.8",
     "react-dom": "^17.0.2",
+    "react-gravatar": "^2.6.3",
     "react-icons": "^4.2.0",
     "react-plaid-link": "^3.2.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.4.1",
     "redux": "^4.1.1",
     "rxjs": "^7.3.0",
     "sass": "^1.38.1",
