--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,15 +1,15 @@
 services:
   redis:
     image: "redis:alpine"
-  client:
-    build:
-      context: client/
-    ports:
-      - 80:80
-    environment:
-      MP_API__HOST: api
-    depends_on:
-      - api
+  #client:
+  #  build:
+  #    context: client/
+  #  ports:
+  #    - 80:80
+  #  environment:
+  #    MP_API__HOST: api
+  #  depends_on:
+  #    - api
   api:
     build:
       dockerfile: server/services/api/Dockerfile
