--- a/src/server/services/task_runner/Dockerfile
+++ b/src/server/services/task_runner/Dockerfile
@@ -14,7 +14,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY core core
 COPY server server
-COPY .secrets.json .secrets.json
+COPY server/.secrets.json server/.secrets.json
 COPY config* .
 
 RUN mkdir logs
