Starting to test out the jobs to ensure they call into the repos correctly

--- a/src/config.json
+++ b/src/config.json
@@ -52,7 +52,8 @@
     "plaid": {
       "secret": "",
       "env": "test",
-      "client_id": ""
+      "client_id": "",
+      "version": ""
     }
   }
 }
