--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -43,6 +43,7 @@ pyflakes==2.3.1
 PyJWT==2.1.0
 pyparsing==3.0.6
 pytest==6.2.5
+pytest-mock==3.6.1
 python-dateutil==2.8.2
 python-engineio==4.2.1
 python-socketio==5.4.0
