--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,16 +16,19 @@
 stages:          # List of stages for jobs, and their order of execution
   - test
 
-# build-job:       # This job runs in the build stage, which runs first.
-#   stage: build
-#   script:
-#     - echo "Compiling the code..."
-#     - echo "Compile complete."
+build-job:       # This job runs in the build stage, which runs first.
+  stage: build
+  script:
+    - echo "installing pip dependencies"
+    - pip install -r ./src/requirements.txt
+    - echo "pip install complete"
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
-    - echo "executing ./bin/test"
+    - echo "decrypting secrets for test run"
+    - echo "decryption complete"
+    - echo "running pytest on ./src/tests"
     - MP_ENVIRONMENT=test PYTHONPATH="$PYTHONPATH:./src pytest ./src/tests
 
 # deploy-job:      # This job runs in the deploy stage.
