--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,15 +10,8 @@ default:
   image: tgittos/money-printer:latest
 
 stages:
-  - build
+#  - build
   - test
-
-build-job:
-  stage: build
-  script:
-    - echo "installing pip dependencies"
-    - pip install -r ./src/requirements.txt
-    - echo "pip install complete"
 
 unit-test-job:
   stage: test
@@ -28,6 +21,9 @@ unit-test-job:
     - apt-get update && apt-get install -y git curl libmcrypt-dev default-mysql-client
     - mysql --version
     - mysql --user=$MYSQL_USER --password=$MYSQL_PASSWORD --database=$MYSQL_DATABASE --host=$MYSQL_HOST --execute="SHOW DATABASES; ALTER USER '$MYSQL_USER'@'%' IDENTIFIED WITH mysql_native_password BY '$MYSQL_PASSWORD'"
+    - echo "installing pip dependencies"
+    - pip install -r ./src/requirements.txt
+    - echo "pip install complete"
     - echo "running pytest on ./src/tests"
     - MP_ENVIRONMENT=test PYTHONPATH="$PYTHONPATH:./src" pytest ./src/tests
 
