poke - this should work

--- a/src/config.json
+++ b/src/config.json
@@ -39,7 +39,7 @@
       "username": "moneyprinter",
       "password": "mp!QAZxsw2",
       "schema": "mp-test",
-      "debug": "false"
+      "debug": "true"
     },
     "redis": {
       "host": "localhost",
