--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,9 @@ run_tests:
     - apt-get update && apt-get install -y git curl libmcrypt-dev default-mysql-client
     - mysql --version
     - mysql --user=$MYSQL_USER --password=$MYSQL_PASSWORD --database=$MYSQL_DATABASE --host=$MYSQL_HOST --execute="SHOW DATABASES; ALTER USER '$MYSQL_USER'@'%' IDENTIFIED WITH mysql_native_password BY '$MYSQL_PASSWORD'"
-    - pip install -r ./src/requirements.txt
-    - MP_ENVIRONMENT=test PYTHONPATH="$PYTHONPATH:./src" pytest ./src/tests
+    - cd src
+    - pip install -r requirements.txt
+    - MP_ENVIRONMENT=test PYTHONPATH="$PYTHONPATH:." pytest ./tests
 
 # deploy-job:      # This job runs in the deploy stage.
 #   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
