--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,8 @@ run_tests:
     - mysql --version
     - mysql --user=$MYSQL_USER --password=$MYSQL_PASSWORD --database=$MYSQL_DATABASE --host=$MYSQL_HOST --execute="SHOW DATABASES; ALTER USER '$MYSQL_USER'@'%' IDENTIFIED WITH mysql_native_password BY '$MYSQL_PASSWORD'"
     - cd src
+    - python -m venv ~/.venv/
+    - source ~/.venv/bin/activate
     - pip install -r requirements.txt
     - MP_ENVIRONMENT=test PYTHONPATH="$PYTHONPATH:." pytest ./tests
 
