--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -14,6 +14,7 @@ dynaconf==3.1.7
 flake8==3.9.2
 Flask==2.0.1
 Flask-Cors==3.0.10
+Flask-JWT-Extended==4.3.1
 Flask-SocketIO==5.1.1
 Flask-SSE==1.0.0
 greenlet==1.1.1
@@ -39,8 +40,6 @@ py==1.11.0
 pycodestyle==2.7.0
 pycparser==2.20
 pyflakes==2.3.1
-PyJWT==2.1.0
-jwt==1.2.0
 pyparsing==3.0.6
 pytest==6.2.5
 pytest-mock==3.6.1
