Got docker-compose up working again, some services are DOA

--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -17,8 +17,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy core app code required to run the app
 COPY core core
 COPY server server
-COPY server/.secrets.json server/.secrets.json
 COPY config* .
+# TODO refactor this to external env vars
+COPY .secrets.json .secrets.json
 
 # Create a logs dir
 RUN mkdir logs
