--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,12 +75,13 @@ test:
   #  - master
 
 deploy_staging:
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^release\//'
+      when: manual
   stage: deploy_staging
   script:
     - echo 'Deploy to ECS staging env'
     # - bash deploy.staging.sh
-  only:
-    - master
 
 deploy_prod:
   rules:
@@ -89,5 +90,3 @@ deploy_prod:
   stage: deploy_prod
   script:
     - bash deploy.prod.sh
-  only:
-    - master
