--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,7 +78,7 @@ deploy_staging:
   rules:
     - if: '$CI_COMMIT_TAG =~ /^release\//'
       when: manual
-  stage: deploy_staging
+  stage: deploy
   script:
     - echo 'Deploy to ECS staging env'
     # - bash deploy.staging.sh
@@ -87,6 +87,6 @@ deploy_prod:
   rules:
     - if: '$CI_COMMIT_TAG =~ /^release\//'
       when: manual
-  stage: deploy_prod
+  stage: deploy
   script:
     - bash deploy.prod.sh
