--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ build:
     - docker pull task_runner || true
     - docker pull scheduler || true
     # Build and push Docker images to the Gitlab registry
-    - docker-compose -f $CI_PROJECT_DIR/docker/docker-compose.yml --profile dev build
+    - docker-compose -f `$CI_PROJECT_DIR`/docker/docker-compose.yml --profile dev build
     - docker push api
     - docker push client
     - docker push data_server
@@ -60,12 +60,12 @@ test:
     - docker pull task_runner
     - docker pull scheduler
     # Start the containers and run the tests before deployment
-    - docker-compose -f $CI_PROJECT_DIR/docker/docker-compose.yml --profile dev up api -d
-    - docker-compose -f $CI_PROJECT_DIR/docker/docker-compose.yml --profile dev up db -d
+    - docker-compose -f `$CI_PROJECT_DIR`/docker/docker-compose.yml --profile dev up api -d
+    - docker-compose -f `$CI_PROJECT_DIR`/docker/docker-compose.yml --profile dev up db -d
     - docker exec --tty $(docker-compose -f $CI_PROJECT_DIR/docker/docker-compose.yml ps -q db) mysql --user=$MYSQL_USER --password=$MYSQL_PASSWORD --database=$MYSQL_DATABASE --host=$MYSQL_HOST --execute="ALTER USER '$MYSQL_USER'@'%' IDENTIFIED WITH mysql_native_password BY '$MYSQL_PASSWORD'"
     - docker exec --tty $(docker-compose -f $CI_PROJECT_DIR/docker/docker-compose.yml ps -q api) /bin/bash -c "cd app && MP_ENVIRONMENT=test PYTHONPATH="$PYTHONPATH:/app" pytest ./tests"
-    - docker-compose -f $CI_PROJECT_DIR/docker/docker-compose.yml --profile dev down api
-    - docker-compose -f $CI_PROJECT_DIR/docker/docker-compose.yml --profile dev down db
+    - docker-compose -f `$CI_PROJECT_DIR`/docker/docker-compose.yml --profile dev down api
+    - docker-compose -f `$CI_PROJECT_DIR`/docker/docker-compose.yml --profile dev down db
   #only:
   #  - master
 
