--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,8 @@ arrow==1.2.0
 attrs==21.2.0
 bcrypt==3.2.0
 bidict==0.21.3
+boto3==1.20.23
+botocore==1.23.23
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.6
@@ -24,6 +26,8 @@ importlib-resources==5.2.2
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jmespath==0.10.0
+jwt==1.2.0
 lxml==4.6.3
 Mako==1.1.5
 MarkupSafe==2.0.1
@@ -40,6 +44,7 @@ py==1.11.0
 pycodestyle==2.7.0
 pycparser==2.20
 pyflakes==2.3.1
+PyJWT==2.1.0
 pyparsing==3.0.6
 pytest==6.2.5
 pytest-mock==3.6.1
@@ -53,6 +58,7 @@ requests==2.26.0
 rq==1.10.0
 rq-dashboard==0.6.1
 rq-scheduler==0.11.0
+s3transfer==0.5.0
 six==1.16.0
 SQLAlchemy==1.4.25
 sseclient==0.0.27
